fixed bug with backface-visibility on safari

--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -17,6 +17,7 @@
 
 		width: 100%;
 		backface-visibility: hidden;
+		-webkit-backface-visibility: hidden;
 		border-radius: 3px;
 		overflow: hidden;
 		box-shadow: 0 1.5rem 4rem rgba($color-black, .15);
